--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
 
 
     <div class="main">
-        <div class="container main-flex">
-            <h2 class="main-title">Create beautiful illustrations, no design skills needed</h2>
+        <div class="container">
+          <div class="main-flex">  <h2 class="main-title">Create beautiful illustrations, no design skills needed</h2>
             <p class="main-text">A growing illustration library that you can make your own</p>
-            <button class="main-btn">Find the perfect illustration</button>
-            <img src="./images/Frame (10).png" alt="" class="main-img">
+            <button class="main-btn">Find the perfect illustration</button></div>
+        <div class="main-left">
+
         </div>
+     
+        </div>
+
     </div>
 
 
